tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/instanceip/wildcard_IP_with_localhost_sidecar/_test_context/Sidecar.3714178847.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar
  namespace: echo-2-88348
spec:
  egress:
  - hosts:
    - ./*
  ingress:
  - defaultEndpoint: 127.0.0.1:18080
    port:
      number: 18080
      protocol: HTTP
  workloadSelector:
    labels:
      app: b
